<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/window_background"
    tools:ignore="all">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_house_type"
            style="@style/CalcTableLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_house_type" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/atv_house_type"
                style="@style/MineCalcRightTextView"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="@string/calc_average_house" />

            <include layout="@layout/arrow_table" />
        </RelativeLayout>

        <RelativeLayout style="@style/CalcTableLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_house_area" />

            <LinearLayout
                style="@style/MineCalcLinearLayout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/aet_house_area"
                    style="@style/MineTableEditText"
                    android:layout_width="60dp" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/MineCalcRightTextView"
                    android:text="@string/calc_ping" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout style="@style/CalcTableLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_house_unit_price" />

            <LinearLayout
                style="@style/MineCalcLinearLayout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/aet_house_unit_price"
                    style="@style/MineTableEditText"
                    android:layout_width="60dp" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/MineCalcRightTextView"
                    android:text="@string/calc_yuan_ping" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout style="@style/CalcTableLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_house_total" />

            <LinearLayout
                style="@style/MineCalcLinearLayout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/aet_house_total"
                    style="@style/MineTableEditText"
                    android:layout_width="60dp" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/MineCalcRightTextView"
                    android:text="@string/calc_wan_yuan" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_levy_type"
            style="@style/CalcTableLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_levy_type" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/atv_levy_type"
                style="@style/MineCalcRightTextView"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="@string/price_total" />

            <include layout="@layout/arrow_table" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_house_original"
            style="@style/CalcTableLayout"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_house_original" />

            <LinearLayout
                style="@style/MineCalcLinearLayout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/aet_house_original"
                    style="@style/MineTableEditText"
                    android:layout_width="60dp" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/MineCalcRightTextView"
                    android:text="@string/calc_wan_yuan" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_buy_years"
            style="@style/CalcTableLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_buy_years" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/atv_buy_years"
                style="@style/MineCalcRightTextView"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="@string/calc_buy_five_year" />

            <include layout="@layout/arrow_table" />
        </RelativeLayout>

        <RelativeLayout style="@style/CalcTableLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_buyer_first" />

            <!--<android.support.v7.widget.SwitchCompat-->
                <!--android:id="@+id/sc_buyer_first"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:checked="true" />-->

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sc_buyer_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:checked="true"
                app:kswBackDrawable="@drawable/flyme_back_drawable"
                app:kswBackMeasureRatio="2.2"
                app:kswThumbDrawable="@drawable/flyme_thumb_drawable"
                app:kswThumbHeight="16dp"
                app:kswThumbWidth="16dp" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/atv_buy_yes_no"
                style="@style/CalcTableTextView"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/calc_yes"
                android:textColor="@color/black_medium" />

        </RelativeLayout>

        <RelativeLayout style="@style/CalcTableLayout">

            <android.support.v7.widget.AppCompatTextView
                style="@style/CalcTableTextView"
                android:layout_centerVertical="true"
                android:text="@string/calc_seller_only" />

            <!--<android.support.v7.widget.SwitchCompat-->
                <!--android:id="@+id/sc_seller_only"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:checked="true" />-->

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sc_seller_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:checked="true"
                app:kswBackDrawable="@drawable/flyme_back_drawable"
                app:kswBackMeasureRatio="2.2"
                app:kswThumbDrawable="@drawable/flyme_thumb_drawable"
                app:kswThumbHeight="16dp"
                app:kswThumbWidth="16dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/atv_sale_yes_no"
                style="@style/CalcTableTextView"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/calc_yes"
                android:textColor="@color/black_medium" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btn_tax_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:enabled="false"
            android:text="@string/btn_start_calc"
            android:textSize="16sp"
            android:textColor="@color/btn_custom_txt_color"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/btn_custom_bg" />

    </LinearLayout>
</ScrollView>